js/js.translator/testData/incremental/invalidation/privateDeclarationLeakThroughDefaultParam/main/f.10.kt
private object Obj {
    val x = "10"
}

private inline fun bar() = Obj.x

internal inline fun foo(lambda: () -> String = ::bar): String {
    return lambda()
}
